--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ezpp!",
+  "name": "osu-preview",
   "version": "1.8.2",
-  "description": "Browser extension for calculating pp!",
+  "description": "Browser extension for previewing osu beatmaps.",
   "main": "popup/index.js",
   "dependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^6.3.6",
-    "babel-eslint": "^10.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.1.5",
@@ -20,7 +20,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "ojsama": "^1.2.1",
     "sass-loader": "^7.1.0",
     "showdown": "^1.7.2",
@@ -33,21 +33,13 @@
     "start:chrome": "cross-env BUILD_CHROME=1 npm start",
     "start:firefox": "cross-env BUILD_FF=1 npm start",
     "build": "rm -rf build/ && cross-env NODE_ENV=production webpack --config webpack.production.config.js",
-    "build:chrome": "cross-env BUILD_CHROME=1 npm run build && (cd build; zip -qr ../ezpp-chrome.zip *) && rm -rf build/",
-    "build:firefox": "cross-env BUILD_FF=1 npm run build && (cd build; zip -qr ../ezpp-firefox.zip *) && rm -rf build/",
-    "build:all": "rm -f ezpp-chrome.zip ezpp-firefox.zip && npm run build:chrome && npm run build:firefox",
+    "build:chrome": "cross-env BUILD_CHROME=1 npm run build && (cd build; zip -qr ../osu-preview-chrome.zip *) && rm -rf build/",
+    "build:firefox": "cross-env BUILD_FF=1 npm run build && (cd build; zip -qr ../osu-preview-firefox.zip *) && rm -rf build/",
+    "build:all": "rm -f osu-preview-chrome.zip osu-preview-firefox.zip && npm run build:chrome && npm run build:firefox",
     "lint": "eslint --fix ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/oamaok/ezpp.git"
-  },
-  "author": "Teemu Pääkkönen <oamaok@gmail.com>",
+  "author": "Jerry Zhu",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/oamaok/ezpp/issues"
-  },
-  "homepage": "https://github.com/oamaok/ezpp#readme",
   "devDependencies": {
     "file-loader": "^2.0.0",
     "webpack-cli": "^3.1.1"
