--- a/package.json
+++ b/package.json
@@ -31,16 +31,21 @@
     "start": "cross-env NODE_ENV=development webpack --config webpack.development.config.js -w",
     "start:chrome": "cross-env BUILD_CHROME=1 npm start",
     "start:firefox": "cross-env BUILD_FF=1 npm start",
-    "build": "rm -rf build/ && cross-env NODE_ENV=production webpack --config webpack.production.config.js",
-    "build:chrome": "cross-env BUILD_CHROME=1 npm run build && (cd build; zip -qr ../osu-preview-chrome.zip *) && rm -rf build/",
-    "build:firefox": "cross-env BUILD_FF=1 npm run build && (cd build; zip -qr ../osu-preview-firefox.zip *) && rm -rf build/",
+    "clean": "run-script-os",
+    "clean:darwin:linux": "rm -rf build/",
+    "clean:win32": "rmdir /s /q build 2>nul & exit 0",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.production.config.js",
+    "build:chrome": "cross-env BUILD_CHROME=1 npm run build && bestzip osu-preview-chrome.zip build/* && npm run clean",
+    "build:firefox": "cross-env BUILD_FF=1 npm run build && bestzip osu-preview-firefox.zip build/* && npm run clean",
     "build:all": "rm -f osu-preview-chrome.zip osu-preview-firefox.zip && npm run build:chrome && npm run build:firefox",
     "lint": "eslint --fix ."
   },
   "author": "Jerry Zhu",
   "license": "MIT",
   "devDependencies": {
+    "bestzip": "^2.1.2",
     "file-loader": "^2.0.0",
+    "run-script-os": "^1.0.5",
     "webpack-cli": "^3.1.1"
   }
 }
