--- a/package.json
+++ b/package.json
@@ -6,26 +6,21 @@
   "dependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.2",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^10.2.0",
     "cross-env": "^5.1.5",
-    "css-loader": "^1.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
     "showdown": "^1.7.2",
     "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2"
+    "url-loader": "^1.1.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack --config webpack.development.config.js -w",
@@ -46,6 +41,9 @@
     "bestzip": "^2.1.2",
     "file-loader": "^2.0.0",
     "run-script-os": "^1.0.5",
-    "webpack-cli": "^3.1.1"
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   }
 }
