--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   "devDependencies": {
     "bestzip": "^2.1.2",
     "file-loader": "^2.0.0",
-    "run-script-os": "^1.0.5",
+    "mini-css-extract-plugin": "^2.5.2",
+    "run-script-os": "^1.1.6",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
-    "webpack": "^5.66.0",
+    "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1"
   }
 }
